[package]
name = "orcanet-market-ferrous"
version = "0.1.0"
edition = "2021"
default-run = "orcanet-market-ferrous"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
